# CDTS

./: .gitmodules  CMakeLists.txt  README.md
computation_engine/: computation.txt
computation_engine/core/errorAndDeviceProps/: deviceProperties.cuh  errorHandler.cuh
computation_engine/core/solarSystem/: model.cuh  planet.cu  planet.cuh
rendering_engine/: rendering.txt
